2008-09-05  Paolo Bonzini  <bonzini@gnu.org>

	* emit-rtl.c (gen_rtvec): Rewrite not using gen_rtvec_v.
	(gen_rtvec_v): Fix coding standards.

2008-09-04  Jan Hubicka  <jh@suse.cz>

	* i386.c (decide_alg): Be more conservative about optimizing for size.

2008-09-04  Ian Lance Taylor  <iant@google.com>

	* varasm.c (narrowing_initializer_constant_valid_p): New
	static function.
	(initializer_constant_valid_p): Call it.

2008-09-04  Jeff Law  <law@redhat.com>

	* fold-const.c (native_encode_real): Fix computation of WORDS.
	(native_interpret_real): Likewise.

2008-09-04  Janis Johnson  <janis187@us.ibm.com>

	* config/rs6000/t-rs6000: Remove target gt-rs6000.h.

2008-09-04  Vladimir Makarov  <vmakarov@redhat.com>

	* ira-conflicts.c (process_regs_for_copy): Check insn to check
	that the cost is already taken into account in ira-costs.c

	* ira-int.h (ira_debug_copy, ira_debug_copies): New.

	* ira-build.c (print_copy, print_copies, ira_debug_copy,
	ira_debug_copies): New.
	(ira_bulid): Call print_copies.
	
	* doc/tm.texi (IRA_COVER_CLASSES): Fix the description.
	
2008-09-04  Samuel Tardieu  <sam@rfc1149.net>

	PR target/32783
	* config/rs6000/rs6000.c (optimization_options): Remove check of
	flag_toplevel_order.

2008-09-04  Adam Nemet  <anemet@caviumnetworks.com>

	* config/mips/mips.h (ISA_HAS_SEQ_SNE): New macro.
	* config/mips/mips.c (mips_expand_scc): Also expand seq and sne if
	second operand is a reg_imm10_operand.
	* config/mips/mips.md (*seq_<GPR:mode><GPR2:mode>_seq,
	*sne_<GPR:mode><GPR2:mode>_sne): New patterns.
	(*seq_<GPR:mode><GPR2:mode>): Rename to
	*seq_zero_<GPR:mode><GPR2:mode>.  Don't match if
	ISA_HAS_SEQ_SNE.
	(*seq_<GPR:mode><GPR2:mode>_mips16): Rename to
	*seq_zero_<GPR:mode><GPR2:mode>_mip16.  Don't match if
	ISA_HAS_SEQ_SNE.
	(*sne_<GPR:mode><GPR2:mode>): Rename to
	*sne_zero_<GPR:mode><GPR2:mode>.  Don't match if
	ISA_HAS_SEQ_SNE.

2008-09-04  Adam Nemet  <anemet@caviumnetworks.com>

	* config/mips/mips.h (ISA_HAS_EXTS): New macro.